dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
detadata:
  name: suadeo-deployment
  namespace: suadeo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suadeoserver
  template:
    metadata:
      labels:
        app: suadeoserver
    spec:
      containers:
      - image: rg.fr-par.scw.cloud/suadeo/suadeoappserver:24.0.0.15773
        imagePullPolicy: Always
        name: suadeoserver
        ports:
        - containerPort: 5000
