dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suadeoserver-service
  namespace: suadeo-dev
spec:
  ports:
  - port: 5001
    targetPort: 5000
    protocol: TCP
  selector:
    app: suadeoserver-service
