dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suadeo-ingress
  namespace: suadeo-dev

spec:
  rules:
  - host: "suadeo-k8s.numerique-interieur.com" 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  suadeoserver-service
              port:
                  number: 8080
